--- a/src/app/components.dumb/landing/bio/bio.component.html
+++ b/src/app/components.dumb/landing/bio/bio.component.html
@@ -1,6 +1,5 @@
-<section class="bg-my-white -mt-40 py-80 px-4 sm:px-20 lg:px-44 2xl:px-96">
-
-    <h2 class="text-center title">Qui je suis</h2>
+<section id="bio" class="pt-80">
+    <h2 class="text-center titleh2">Qui je suis</h2>
     <div class="grid grid-cols-1  place-items-center gap-4">
         <img height="150px" width="150px" src="../../../../assets/images/me.png" alt="">
         <p class="bg-white/80 shadow-md p-6 rounded-lg max-w-[800px]">
