--- a/src/app/components.dumb/landing/bio/bio.component.html
+++ b/src/app/components.dumb/landing/bio/bio.component.html
@@ -1,4 +1,4 @@
-<section id="bio" class="pt-80">
+<section id="bio" class="">
     <h2 class="text-center titleh2">Qui je suis</h2>
     <div class="grid grid-cols-1  place-items-center gap-4">
         <img height="150px" width="150px" src="../../../../assets/images/me.png" alt="">
