--- a/src/app/components.dumb/landing/bio/bio.component.html
+++ b/src/app/components.dumb/landing/bio/bio.component.html
@@ -1,7 +1,7 @@
 <section id="bio" class="">
     <h2 class="text-center titleh2">Qui je suis</h2>
     <div class="grid grid-cols-1  place-items-center gap-4">
-        <img height="150px" width="150px" src="../../../../assets/images/me.png" alt="">
+        <img height="150px" width="150px" src="../../../../assets/images/me.webp" alt="">
         <div class="flex flex-wrap gap-2">
             <a href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
                 <i style="font-size: 1.5rem" class="text-my-black hover:text-my-brown pi pi-linkedin mr-2"></i>
