--- a/src/app/components.dumb/landing/bio/bio.component.html
+++ b/src/app/components.dumb/landing/bio/bio.component.html
@@ -3,10 +3,10 @@
     <div class="grid grid-cols-1  place-items-center gap-4 mb-10">
         <img class="rounded-full" height="150px" width="150px" src="../../../../assets/images/me.webp" alt="">
         <div class="flex flex-wrap gap-2">
-            <a href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
+            <a aria-label="Mon LinkedIn" href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
                 <i style="font-size: 1.5rem" class="text-my-black hover:text-my-brown pi pi-linkedin mr-2"></i>
             </a>
-            <a href="https://github.com/willfynch" target="_blank" rel="noopener noreferrer">
+            <a aria-label="Mon Github" href="https://github.com/willfynch" target="_blank" rel="noopener noreferrer">
                 <i style="font-size: 1.5rem" class="text-my-black hover:text-my-brown pi pi-github mr-2"></i>
             </a>
         </div>
